Update pagination logic
