# swagger.yaml
@@ -91,9 +91,23 @@ parameters:
     type: integer
     required: false
     description: Number of results to return
-    default: 10
-    maximum: 10000
+    default: 25
+    maximum: 500
 definitions:
+  Meta:
+    properties:
+      totalPage:
+        type: integer
+        description: Total number of pagess
+        example: 10
+      currentPageNumber:
+        type: integer
+        description: Page number of the returned results
+        example: 1
+      currentPageSize:
+        type: integer
+        description: Number of results per page
+        example: 25
   SelfLink:
     properties:
       self:
@@ -143,6 +157,8 @@ definitions:
     properties:
       links:
         $ref: '#/definitions/PaginationLinks'
+      meta:
+        $ref: '#/definitions/Meta'
       data:
         type: array
         items:
